# t3xt

./: .gitignore  Cargo.toml  README.md  demo.sh  test.sh
certs/: server.crt  server.key
logs/: t3xt.log.2025-09-29
src/: client.rs  crypto.rs  main.rs  message.rs  server.rs
