[package]
name = "t3xt"
version = "0.1.0"
edition = "2021"
authors = ["292"]
description = "基于QUIC协议的P2P即时通信软件"

[dependencies]
quinn = "0.10"
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.21", default-features = false, features = ["quic"] }
rustls-pemfile = "1.0"
rcgen = "0.11"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }